<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RoutesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fillRouteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="Fill-in Route Information Below:"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/routeNamePage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/startLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Start Location"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routeNamePage" />

        <EditText
            android:id="@+id/routeNamePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="Route Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fillRouteText" />

        <RadioGroup
            android:id="@+id/groupFlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startLocationName">

            <RadioButton
                android:id="@+id/radio_hilly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Hilly"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="270dp" />

            <RadioButton
                android:id="@+id/radio_flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Flat"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="270dp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/groupLoop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupFlat">

            <RadioButton
                android:id="@+id/radio_loop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Loop" />

            <RadioButton
                android:id="@+id/radio_out_and_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Out-And-Back" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/groupStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupLoop">

            <RadioButton
                android:id="@+id/radio_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Street" />

            <RadioButton
                android:id="@+id/radio_trail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trail" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/groupSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupStreet">

            <RadioButton
                android:id="@+id/radio_even"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Even Surface" />

            <RadioButton
                android:id="@+id/radio_uneven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Uneven Surface" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/groupDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupSurface">

            <RadioButton
                android:id="@+id/radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Easy" />

            <RadioButton
                android:id="@+id/radio_moderate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Moderate" />

            <RadioButton
                android:id="@+id/radio_difficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Difficult" />

        </RadioGroup>

        <EditText
            android:id="@+id/routeNotes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="Notes"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupDifficulty" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pressOK"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routeNotes"
            app:layout_constraintVertical_bias="0.157" />

        <TextView
            android:id="@+id/radio_header_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:text="Street or Trail?"
            app:layout_constraintBottom_toTopOf="@+id/groupStreet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupLoop"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/radio_header_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="7dp"
            android:text="Loop or Out-And-Back?"
            app:layout_constraintBottom_toTopOf="@+id/groupLoop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupFlat"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/radio_header_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="Flat or Hilly?"
            app:layout_constraintBottom_toTopOf="@+id/groupFlat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startLocationName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/radio_header_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="9dp"
            android:text="Even or Uneven Surface?"
            app:layout_constraintBottom_toTopOf="@+id/groupSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupStreet"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/radio_header_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="4dp"
            android:text="Difficulty?"
            app:layout_constraintBottom_toTopOf="@+id/groupDifficulty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupSurface"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>