...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:layout_below="@id/backToMainMenuButton"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Back To Main Menu"
        android:textSize="10sp" />

    <Button
        android:id="@+id/addRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/uploadRouteButton"
        android:text="Add Route"
        android:textSize="10sp" />

    <Button
        android:id="@+id/uploadRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
