...
            android:padding="2dp" />

        <TextView
            android:id="@+id/route_screen_member_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/route_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="Team Member Name"
            android:textColor="@android:color/holo_purple"
            android:textSize="15sp"
            android:textStyle="bold"
...
            android:text="Line1"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startingPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/route_screen_member_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/favorite"
...
